tests/paczka1/fuzzy1/25557723.err
Error in line 11: nW153NHRz S320 6,9
Error in line 25: HQUzTXu A472 20,8
Error in line 15: S320 A472 72,5
Error in line 31: S320 S232 36,3
